# RAG_Agent

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260528_02_extend_document_file_type.py  20260528_03_chunking_config.py  20260529_01_add_user_approval_fields.py
backend/app/: main.py
backend/app/api/: routes_auth.py  routes_chat.py  routes_documents.py  routes_health.py  routes_kb.py  routes_organizations.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: seed.py  session.py
backend/app/models_gateway/: llm_client.py
backend/app/rag/: __init__.py  document_readers.py  embedding_client.py  ingest.py  llamaindex_factory.py  prompt_templates.py  rerankers.py  retrievers.py  rule_matcher.py  text_cleaning.py
backend/app/schemas/: auth.py  chat.py  document.py  knowledge_base.py  organization.py
backend/app/scripts/: reingest_documents.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  document_service.py  knowledge_base_service.py  rag_service.py
backend/app/workers/: celery_app.py  document_tasks.py
backend/rag_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth_registration.py  test_delete_resources.py  test_models.py  test_text_cleaning.py
deploy/: docker-compose.dev.yml  docker-compose.linux.yml
docs/: P3_所需信息清单.md  P3_知识库与文档入库_研发计划.md  P4_LlamaIndex_RAG_研发计划.md  v0开发计划.md  v0版本技术设计.md  一键启动停止.md  会话设置功能_研发计划与技术说明.md  文档解析乱码治理_研发计划.md  用户注册功能_研发计划.md  知识库删除功能_研发计划.md  需求文档.md  (+1 more)
(+78 files in other folders)
