[project]
name = "rag-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the Agentic RAG platform."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "celery>=5.4.0",
    "fastapi>=0.115.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "llama-index>=0.11.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-readers-file>=0.2.0",
    "llama-index-vector-stores-postgres>=0.2.0",
    "minio>=7.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pandas>=2.2.0",
    "pgvector>=0.2.5",
    "pymupdf>=1.24.0",
    "psycopg[binary]>=3.2.0",
    "python-docx>=1.1.0",
    "docx2txt>=0.8",
    "python-multipart>=0.0.9",
    "python-jose>=3.3.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "openpyxl>=3.1.0",
    "openai>=1.45.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["app", "alembic"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
